updated images for categories

--- a/web/WEB-INF/jdbc.properties
+++ b/web/WEB-INF/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.url=jdbc:oracle:thin:@192.168.0.104:1521:orcl
 jdbc.driverClassName=oracle.jdbc.OracleDriver
-jdbc.username=FABGLINV
-jdbc.password=FABGLINV
+jdbc.username=EZIMEDIC
+jdbc.password=EZIMEDIC
 email.username=shehzad.mallick@diamondfoam.com
 email.password=Mallick.123mis
 email.pop=mail.diamondfoam.com
