bug fixing and added temp doc page

--- a/web/WEB-INF/jdbc.properties
+++ b/web/WEB-INF/jdbc.properties
@@ -1,8 +1,8 @@
-jdbc.url=jdbc:oracle:thin:@192.168.0.104:1521:orcl
+jdbc.url=jdbc:oracle:thin:@192.168.1.100:1521:orcl
 jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.username=EZIMEDIC
 jdbc.password=EZIMEDIC
-email.username=shehzad.mallick@diamondfoam.com
-email.password=Mallick.123mis
-email.pop=mail.diamondfoam.com
-email.port=26
+email.username=noreply@treatwellservices.com
+email.password=]e-p9m3MgEGn
+email.pop=ss0109.hostingcare.net
+email.port=465
