--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ nbproject/private/private.xml
 nbproject/private/private.properties
 nbproject/ant-deploy.xml
 nbproject/project.properties
+nbproject/private/private.xml
