--- a/web/WEB-INF/jdbc.properties
+++ b/web/WEB-INF/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:oracle:thin:@192.168.1.50:1521:orcl
+jdbc.url=jdbc:oracle:thin:@192.168.1.55:1521:orcl
 jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.username=EZIMEDIC
 jdbc.password=EZIMEDIC
@@ -6,3 +6,4 @@ email.username=noreply@treatwellservices.com
 email.password=]e-p9m3MgEGn
 email.pop=ss0109.hostingcare.net
 email.port=465
+email.key=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
